<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".services.ServicesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#465056"
            app:popupTheme="@style/AppTheme.PopupOverlay">


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
    android:layout_below="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:text="@string/assist_detail"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="normal" />




        <TextView
            android:id="@+id/note"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/one_call_will_attend_only_one_patient"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="makerequest"
        android:text="@string/make_request"
        android:textAllCaps="false"
        android:background="@drawable/btn_text"
        android:backgroundTint="@color/black"
        android:elevation="3dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute,UsingOnClickInXml" />

</RelativeLayout>